--- a/uma/web/templates/web/combinations.html
+++ b/uma/web/templates/web/combinations.html
@@ -12,15 +12,17 @@
                     <form>
                         <div class="input-group">
                             <span class="input-group-text">相性</span>
-                            <input type="number" class="form-control" value="1.0">
+                            <input type="number" class="form-control" name="score" value="{{score}}" step="0.1" min="0" max="1">
                             <span class="input-group-text">人数</span>
-                            <input type="number" class="form-control" value="4">
+                            <input type="number" class="form-control" name="size" value="{{size}}" min="4" max="8">
                         </div>
-                        <div class="input-group my-2">
-                            {% for i in girls %}
-                                <div class="form-check form-check-inline">
-                                    <input type="checkbox" class="form-check-input" id="{{i}}">
-                                    <label class="form-check-label" for="{{i}}">{{i}}</label>
+                        <div class="input-group my-2 row">
+                            {% for girl in girls %}
+                                <div class="col-3">
+                                    <div class="form-check form-check-inline">
+                                        <input type="checkbox" class="form-check-input" name="girls" value="{{girl.index}}" id="{{girl.index}}" {{girl.checked}}>
+                                        <label class="form-check-label" for="{{girl.index}}">{{girl.name}}</label>
+                                    </div>
                                 </div>
                             {% endfor %}
                         </div>
@@ -34,10 +36,10 @@
                 <div class="card-body">
                     <table class="table">
                         <tbody>
-                            {% for com in combinations %}
+                            {% for girls in combinations %}
                                 <tr>
-                                    {% for i in com %}
-                                        <td>{{ i }}</td>
+                                    {% for girl in girls %}
+                                        <td>{{ girl }}</td>
                                     {% endfor %}
                                 </tr>
                             {% endfor %}
