--- a/uma/web/templates/web/combinations.html
+++ b/uma/web/templates/web/combinations.html
@@ -13,7 +13,7 @@
                         因子考慮しない良相性を1.0として、組み合わせにおける平均値を計算しています。
                     </p>
                     <div>
-                        出典：
+                        相性データ出典：
                     </div>
                     <div>
                         管理者：<a href="https://twitter.com/ichi_pg">@ichi_pg</a>
